[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yax"
description = """
Yet Another X: JAX/FLAX module tracing, modification, and evaluation."""
license = {text = "Apache-2.0"}
authors = [
    {name = "Daniel Bershatsky", email = "daniel.bershatsky@gmail.com"},
]
readme = {file = "README.md", content-type = "text/markdown"}
version = "0.0.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = ["flax", "jax", "numpy"]
requires-python = ">=3.12,<4"

[project.optional-dependencies]
dev = ["isort", "pytest>=8.2", "pytest-timeout~=2.3", "ruff"]
serde = ["ytsaurus-client"]
test = ["transformers"]

[project.urls]
Homepage = "https://github.com/daskol/yax"
Repository = "https://github.com/daskol/yax.git"

[tool.isort]
combine_as_imports = true
known_first_party = [
    "_fewbit", "fewbit", "lora", "profile_pb2", "profiling", "yax",
]
multi_line_output = 4

[tool.mypy]
no_implicit_optional = true

show_column_numbers = true
show_error_codes = true
show_error_context = false

warn_unused_ignores = true

plugins = ["numpy.typing.mypy_plugin"]

[tool.pytest.ini_options]
minversion = "8.2"
addopts = "-ra -q -m 'not slow' --no-header"
testpaths = ["tests"]
markers = [
    "slow: slow tests (deselect with '-m \"not slow\"')",
    "cuda: tests that requires CUDA",
]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
indent-width = 4
line-length = 79
extend-exclude = []

[tool.ruff.lint]
select = ["E", "F", "NPY", "PYI", "PTH"]
ignore = ["PTH123"]
preview = true

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.pycodestyle]
max-doc-length = 79
max-line-length = 79

[tool.setuptools]
zip-safe = true
py-modules = ["yax"]

[tool.yapf]
based_on_style = "pep8"
